# School

./: AUTHORS  Axe.hh  BarCodeTrt.cpp  BarCodeTrt.hh  Box.cpp  Box.hh  CMakeLists.txt  Pretrt.cpp  Pretrt.hh  README  README.md  TODO  TRPA_CarolineBeyne-ThomasBoulanger-PerrineBrunel-PierreLeRendu.tar.bz2  TabInt.cpp  TabInt.hh  Trt.cpp  Trt.hh  file2.txt  file3.txt  main.cpp  main.hh  test_File_app.txt  test_File_trt.txt  train.lst  train_reda.txt
TIRF/: AUTHORS  CMakeLists.txt  README.md
TIRF/src/: Axe.cpp  BarCodeTrt.cpp  CMakeLists.txt  Pretrt.cpp  Trt.cpp  main.hh
TRPA/: README.md  test.lst  test_reda.txt
TRPA/TRPA_CarolineBeyne-ThomasBoulanger-PerrineBrunel-PierreLeRendu/: README
TRPA/TRPA_CarolineBeyne-ThomasBoulanger-PerrineBrunel-PierreLeRendu/src/: Testing.hh  VecParam.cpp
TRPA/samples/: test_basic.txt  test_class.txt  train_basic.txt  train_class.txt
TRPA/samples/class_samples/: Reda_27092013_103529.txt  Reda_27092013_103547.txt
TRPA/src/: Parseur.hh  Sign.cpp  TestObj.hh
TRPA/test_caro/: u1-test.txt  u2-test.txt  u2-train.txt  u4-test.txt  u4-train.txt  u5-train.txt
TRPA_CarolineBeyne-ThomasBoulanger-PerrineBrunel-PierreLeRendu/: AUTHORS  CMakeLists.txt  README~
TRPA_CarolineBeyne-ThomasBoulanger-PerrineBrunel-PierreLeRendu/src/: Base.hh  CMakeLists.txt~  Learning.hh  Sign.hh  Testing.cpp  Testing.hh  main.hh
src/: Base.cpp  Base.hh  CMakeLists.txt  Learning.cpp  Learning.hh  Model.cpp  Model.hh  Parseur.cpp  Parseur.hh  Sign.cpp  Sign.hh  TestObj.cpp  TestObj.hh  Testing.cpp  Testing.hh  VecParam.cpp  VecParam.hh  main.hh  main_app.cpp  main_trt.cpp
test_caro/: u1-train.txt  u3-test.txt  u3-train.txt  u5-test.txt
